<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D7AF1"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#4D7AF1">

        <EditText
            android:id="@+id/nimEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nim"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nimEt"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/nilaiEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameEt"
            android:hint="@string/nilai"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />


        <Button
            android:id="@+id/btnProses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nilaiEt"
            android:layout_marginTop="20dp"
            android:background="#DD2C56"
            android:shadowColor="#C9A9A9"
            android:text="@string/Proses"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnProses"
            app:srcCompat="@mipmap/logo" />


    </RelativeLayout>

</RelativeLayout>